--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Zhiao Zhou"
 title_separator          : "-"
 name                     : &name "Zhiao Zhou"
 description              : &description "Quant researcher at Guotai Junan Securities"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://zhiaozhou.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "zhiaozhou.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
