--- a/_config.yml
+++ b/_config.yml
@@ -92,16 +92,16 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/zhiaozhou/"
+  github           : "zhiaozhou"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/zhiaozhou/"
+  linkedin         : "zhiaozhou"
   orcid            : 
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://stackoverflow.com/users/9667493/zhiao"
+  stackoverflow    : "9667493/zhiao"
   steam            :
   tumblr           :
   twitter          : 
