--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,8 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
+  - title: "Travel"
+    url: /travel/
+
   - title: "CV"
     url: /cv/
